--- a/common/header.html
+++ b/common/header.html
@@ -1,16 +1,16 @@
 
-<script src="../js/common.js"></script>
+<script src="sub-page/js/common.js"></script>
 
 <div class="inner">
     <h1 class="logo">
-        <a href="#">
-            <img src="../img/163px-SK_logo.svg.png" alt="">
+        <a href="/sub-page/">
+            <img src="/sub-page/img/163px-SK_logo.svg.png" alt="">
         </a>
     </h1>
     <nav class="nav">
         <ul class="gnb">
             <li>
-                <a href="sub/sub01.html" class="depth01">MENU1</a>
+                <a href="/sub-page/sub/sub01.html" class="depth01">MENU1</a>
                 <ul class="depth02">
                     <li><a href="#">menu1-1</a></li>
                     <li><a href="#">menu1-2</a></li>
