--- a/common/header.html
+++ b/common/header.html
@@ -1,5 +1,5 @@
 
-<script src="sub-page/js/common.js"></script>
+<script src="/sub-page/js/common.js"></script>
 
 <div class="inner">
     <h1 class="logo">
