--- a/sub/sub01.html
+++ b/sub/sub01.html
@@ -13,11 +13,10 @@
         <header class="header">
             <main>
                 첫번째 서브페이지
-            </main>
+            </main> <!-- main end -->
             <footer class="footer">
-
-            </footer>
-        </header>
-    </div>
+            </footer> <!-- footer end -->
+        </header> <!-- header end -->
+    </div> <!-- wrap end -->
 </body>
 </html>
