--- a/common/header.html
+++ b/common/header.html
@@ -45,6 +45,6 @@
                     <li><a href="#">menu4-4</a></li>
                 </ul>
             </li>
-        </ul>
-    </nav>
+        </ul> <!-- gnb end -->
+    </nav> <!-- nav end -->
 </div>
