--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
 <body>
     <div id="wrap">
         <header class="header">
-           
-        </header>
+        </header> <!-- header end -->
 
         <main>
             <section class="main_visual">
                 <img src="img/SK이노베이션_SK에너지_SK주유소_머핀멤버십_머핀_SK머핀멤버십_TH.jpg" alt="">
-            </section>
+            </section> <!-- main_visual end -->
         </main>
 
         <footer class="footer">
             <p>copyright.2024.haminkyung.All rights reserved.</p>
-        </footer>
+        </footer> <!-- footer end -->
     </div>
 </body>
 </html>
